# geogrid

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt
docs/: conf.py  index.md  reference.md  usage.md
src/geogrid/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
