[tool.poetry]
name = "geogrid"
version = "0.0.1"
description = "GeoGrid"
authors = ["Altay Sansal <tasansal@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tasansal/geogrid"
repository = "https://github.com/tasansal/geogrid"
documentation = "https://geogrid.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/tasansal/geogrid/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
xarray = "^2022.6.0"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = "^22.6.0"
coverage = {version = "^6.4.3", extras = ["toml"]}
darglint = "^1.8.1"
flake8 = "<5.0.0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.7.1"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
furo = "^2022.6.21"
isort = "^5.10.1"
mypy = "^0.971"
pep8-naming = "^0.13.1"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
pytest = "^7.1.2"
pyupgrade = "^2.37.3"
safety = "^2.1.1"
sphinx = "^5.1.1"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^4.3.0"
typeguard = "^2.13.3"
xdoctest = {version = "^1.0.1", extras = ["colors"]}
myst-parser = "^0.18.0"

[tool.poetry.scripts]
geogrid = "geogrid.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["geogrid", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.1.0b3"]
build-backend = "poetry.core.masonry.api"
